PR/51039: Abhinav Upadhyay: Check for return value of chdir(2)